PaymentSystem/cloudformation-template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Low-resilience infrastructure for sample microservices application",
  "Parameters": {
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "EC2 Key Pair for SSH access"
    },
    "LatestAmiId": {
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [{"Key": "Name", "Value": "SampleAppVPC"}]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{"Key": "Name", "Value": "SampleAppIGW"}]
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "InternetGatewayId": {"Ref": "InternetGateway"}
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": {"Fn::Select": [0, {"Fn::GetAZs": ""}]},
        "MapPublicIpOnLaunch": true,
        "Tags": [{"Key": "Name", "Value": "PublicSubnet1"}]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": {"Fn::Select": [1, {"Fn::GetAZs": ""}]},
        "MapPublicIpOnLaunch": true,
        "Tags": [{"Key": "Name", "Value": "PublicSubnet2"}]
      }
    },
    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "Tags": [{"Key": "Name", "Value": "PublicRouteTable"}]
      }
    },
    "Route": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachGateway",
      "Properties": {
        "RouteTableId": {"Ref": "RouteTable"},
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {"Ref": "InternetGateway"}
      }
    },
    "SubnetRouteTableAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "PublicSubnet1"},
        "RouteTableId": {"Ref": "RouteTable"}
      }
    },
    "SubnetRouteTableAssociation2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "PublicSubnet2"},
        "RouteTableId": {"Ref": "RouteTable"}
      }
    },
    "AppSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for application servers",
        "VpcId": {"Ref": "VPC"},
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": 22, "ToPort": 22, "CidrIp": "0.0.0.0/0"},
          {"IpProtocol": "tcp", "FromPort": 8080, "ToPort": 8080, "CidrIp": "0.0.0.0/0"}
        ],
        "Tags": [{"Key": "Name", "Value": "AppSecurityGroup"}]
      }
    },
    "OrderServiceInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t3.micro",
        "ImageId": {"Ref": "LatestAmiId"},
        "KeyName": {"Ref": "KeyName"},
        "SubnetId": {"Ref": "PublicSubnet1"},
        "SecurityGroupIds": [{"Ref": "AppSecurityGroup"}],
        "IamInstanceProfile": {"Ref": "InstanceProfile"},
        "Tags": [
          {"Key": "Name", "Value": "OrderService"},
          {"Key": "Service", "Value": "order"}
        ]
      }
    },
    "PaymentServiceInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t3.micro",
        "ImageId": {"Ref": "LatestAmiId"},
        "KeyName": {"Ref": "KeyName"},
        "SubnetId": {"Ref": "PublicSubnet1"},
        "SecurityGroupIds": [{"Ref": "AppSecurityGroup"}],
        "IamInstanceProfile": {"Ref": "InstanceProfile"},
        "Tags": [
          {"Key": "Name", "Value": "PaymentService"},
          {"Key": "Service", "Value": "payment"}
        ]
      }
    },
    "InventoryServiceInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t3.micro",
        "ImageId": {"Ref": "LatestAmiId"},
        "KeyName": {"Ref": "KeyName"},
        "SubnetId": {"Ref": "PublicSubnet1"},
        "SecurityGroupIds": [{"Ref": "AppSecurityGroup"}],
        "IamInstanceProfile": {"Ref": "InstanceProfile"},
        "Tags": [
          {"Key": "Name", "Value": "InventoryService"},
          {"Key": "Service", "Value": "inventory"}
        ]
      }
    },
    "NotificationServiceInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t3.micro",
        "ImageId": {"Ref": "LatestAmiId"},
        "KeyName": {"Ref": "KeyName"},
        "SubnetId": {"Ref": "PublicSubnet1"},
        "SecurityGroupIds": [{"Ref": "AppSecurityGroup"}],
        "IamInstanceProfile": {"Ref": "InstanceProfile"},
        "Tags": [
          {"Key": "Name", "Value": "NotificationService"},
          {"Key": "Service", "Value": "notification"}
        ]
      }
    },
    "UserServiceInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t3.micro",
        "ImageId": {"Ref": "LatestAmiId"},
        "KeyName": {"Ref": "KeyName"},
        "SubnetId": {"Ref": "PublicSubnet1"},
        "SecurityGroupIds": [{"Ref": "AppSecurityGroup"}],
        "IamInstanceProfile": {"Ref": "InstanceProfile"},
        "Tags": [
          {"Key": "Name", "Value": "UserService"},
          {"Key": "Service", "Value": "user"}
        ]
      }
    },
    "DBSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for RDS",
        "SubnetIds": [{"Ref": "PublicSubnet1"}, {"Ref": "PublicSubnet2"}],
        "Tags": [{"Key": "Name", "Value": "DBSubnetGroup"}]
      }
    },
    "DatabaseInstance": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceIdentifier": "sample-app-db",
        "Engine": "postgres",
        "EngineVersion": "15.10",
        "DBInstanceClass": "db.t3.micro",
        "AllocatedStorage": 20,
        "MasterUsername": "dbadmin",
        "MasterUserPassword": "{{resolve:secretsmanager:SampleAppDBPassword:SecretString:password}}",
        "DBSubnetGroupName": {"Ref": "DBSubnetGroup"},
        "VPCSecurityGroups": [{"Ref": "AppSecurityGroup"}],
        "MultiAZ": false,
        "BackupRetentionPeriod": 0,
        "Tags": [{"Key": "Name", "Value": "SampleAppDB"}]
      }
    },
    "InstanceRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [{
            "Effect": "Allow",
            "Principal": {"Service": "ec2.amazonaws.com"},
            "Action": "sts:AssumeRole"
          }]
        },
        "ManagedPolicyArns": ["arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"],
        "Tags": [{"Key": "Name", "Value": "InstanceRole"}]
      }
    },
    "InstanceProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [{"Ref": "InstanceRole"}]
      }
    }
  },
  "Outputs": {
    "OrderServiceIP": {
      "Description": "Public IP of OrderService",
      "Value": {"Fn::GetAtt": ["OrderServiceInstance", "PublicIp"]}
    },
    "PaymentServiceIP": {
      "Description": "Public IP of PaymentService",
      "Value": {"Fn::GetAtt": ["PaymentServiceInstance", "PublicIp"]}
    },
    "InventoryServiceIP": {
      "Description": "Public IP of InventoryService",
      "Value": {"Fn::GetAtt": ["InventoryServiceInstance", "PublicIp"]}
    },
    "NotificationServiceIP": {
      "Description": "Public IP of NotificationService",
      "Value": {"Fn::GetAtt": ["NotificationServiceInstance", "PublicIp"]}
    },
    "UserServiceIP": {
      "Description": "Public IP of UserService",
      "Value": {"Fn::GetAtt": ["UserServiceInstance", "PublicIp"]}
    },
    "DatabaseEndpoint": {
      "Description": "RDS Database Endpoint",
      "Value": {"Fn::GetAtt": ["DatabaseInstance", "Endpoint.Address"]}
    }
  }
}
